[build-system]
requires = ["setuptools >= 77.0.3", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "chydrotree"
description = "Read and process the Gadget4 and the HDF5 consistent tree merger trees"
version = "1.0.1"
authors = [
    { name = "Andrea Negri", email = "anegri@us.es" }
]
license = "BSD-3-clause"
license-files = ["LICEN[CS]E*"]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "numpy",
    "astropy>=7.0",
    "h5py>=3.9.0"]

[project.urls]
Homepage = "https://github.com/NegriAndrea/chydrotree"
Issues = "https://github.com/NegriAndrea/chydrotree/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

